--- a/requirements.txt
+++ b/requirements.txt
@@ -7,6 +7,7 @@ scikit-learn==1.3.0
 
 # Optional but useful
 joblib==1.3.1
+
 beautifulsoup4==4.12.2
 requests==2.31.0
-whois==0.9.27
+python-whois==0.9.27
